Fixed Link Overlaps In Header/Footer

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -20,6 +20,7 @@ body {
 	float:center; 
 	top:25px; 
 	left:20px;
+	z-index:-1;
 }
 
 #tabs{
